# langchain-walkthrough

./: pyproject.toml
example_app/: function_calling.py  main.py  structured_output.py  tool_calling.py
example_app/dataloader/duckduckgo/: agent.py  model.py  query_builder.py  text_search.py
shared_module/: config.py
