[tool.poetry]
name = "langchain-walkthrough"
version = "0.1.0"
description = ""
authors = ["Jack Cho <jack06215@gmail.com>"]
readme = "README.md"
packages = [
  { include = "shared_module" },
]

[tool.poetry.dependencies]
python = "3.11.7"
elasticsearch = "^8.14.0"
elasticsearch-async = "^6.2.0"
pandas = "^2.2.2"
notebook = "^7.2.1"
pydantic = "^2.8.2"
openai = "^1.40.1"
python-dotenv = "^1.0.1"
langchain = "^0.2.7"
langchain-community = "^0.2.7"
langchain-experimental = "^0.0.62"
langchain-openai = "^0.1.16"
langgraph = "^0.1.8"
faiss-cpu = "^1.8.0.post1"
instructor = "^1.3.4"
typeguard = "^4.3.0"
numpy = "1.26.4"
mesop = "^0.9.4"
requests = "^2.32.3"
slack-sdk = "^3.31.0"
sseclient-py = "^1.8.0"
pydantic-settings = "^2.3.4"
sqlalchemy = "^2.0.31"
psycopg2-binary = "^2.9.9"
gspread = "^6.1.2"
gspread-formatting = "^1.2.0"
fastapi = "^0.111.0"
email-validator = "^2.2.0"
asn1crypto = "^1.5.1"
cffi = "^1.16.0"
cryptography = "^42.0.8"
idna = "^3.7"
pycparser = "^2.22"
PyJWT = "^2.8.0"
six = "^1.16.0"
tqdm = "^4.66.4"
auth0-python = "^4.7.1"
dependency-injector = "^4.41.0"
duckdb = "^1.0.0"
duckduckgo-search = "^6.2.6"
adlfs = "^2024.4.1"
pyarrow = "^16.0.0"
fastparquet = "^2024.5.0"
xlsxwriter = "^3.2.0"

[tool.poetry.dev-dependencies]
pandas-stubs = "^2.2.2.240603"
autoflake = "^2.3.1"
autopep8 = "^2.3.1"
flake8 = "^7.1.0"
isort = "^5.13.2"
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
